fixed header on mobile devices

--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ a {
   color: var(--main-white);
   padding: 2.5rem;
   margin: auto 0;
-  height: 100%;
 }
 
 .nav-item:hover {
